[package]
name = "pandoras_pot"
version = "0.5.5"
authors = ["Emil Jonathan Eriksson <github.com/ginger51011>"]
edition = "2021"
description = "Honeypot designed to send huge amounts of data to rude web scrapers"
keywords = ["honeypot", "web", "http"]
categories = ["web", "text-processing", "network-programming"]
readme = "README.md"
license = "AGPL-3.0-only"
repository = "https://github.com/ginger51011/pandoras_pot/"

# We want it real fast
[profile.release]
lto = true
opt-level = 3
codegen-units = 1

# Used for profiling
# debug = true

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tower = { version = "0.4", default-features = false, features = ["limit", "buffer"] }
tower-http = { version = "0.5", default-features = false, features = ["trace"] }
axum = { version = "0.7", default-features = false, features = ["http1", "http2", "matched-path", "original-uri", "tokio", "tower-log", "tracing"]}
futures = "0.3.30"
serde = { version = "1.0", features = [ "derive" ]}
toml = "0.8.14"
home = "0.5.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"]}
markovish = { version = "0.2" }
bytes = "1.5.0"
http-body = "1.0.0"

[dev-dependencies]
tempfile = "3"
