[package]
name = "pandoras_pot"
version = "0.7.2"
authors = ["Emil Jonathan Eriksson <github.com/ginger51011>"]
edition = "2024"
description = "Honeypot designed to send huge amounts of data to rude web scrapers"
keywords = ["honeypot", "web", "http"]
categories = ["text-processing", "network-programming"]
readme = "README.md"
license = "AGPL-3.0-only"
repository = "https://github.com/ginger51011/pandoras_pot/"

# We want it real fast
[profile.release]
lto = true
opt-level = 3
codegen-units = 1

# Used for profiling
# debug = true

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "http2", "matched-path", "original-uri", "tokio", "tower-log", "tracing"]}
bytes = "1.8.0"
futures = "0.3.30"
home = "0.5.11"
http-body = "1.0.1"
markovish = { version = "0.2" }
pico-args = "0.5.0"
rand = { version = "0.9", features = ["small_rng"] }
serde = { version = "1.0", features = [ "derive" ]}
tokio-stream = { version = "0.1" }
tokio = { version = "1", features = ["full"] }
toml = "0.9.5"
tower-http = { version = "0.6", default-features = false, features = ["trace"] }
tower = { version = "0.5", default-features = false, features = ["limit", "buffer"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"]}

[dev-dependencies]
tempfile = "3"
